--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.98"
 bitcode = "0.6.6"
 colog = "1.3.0"
 kdl = "6.3.4"
 log = "0.4.27"
+miette = { version = "7.6.0", features = ["fancy"] }
 sha2 = "0.10.9"
+thiserror = "2.0.12"
 walkdir = "2.5.0"
